<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="@dimen/marginBase"
        android:src="@drawable/calculator"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tamanioImagen">
    </ImageView>
    <LinearLayout
        android:layout_marginTop="@dimen/marginBase"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
       <TextView
           android:layout_width="match_parent"
           android:text="@string/n1Label"
           android:gravity="center_horizontal"
           android:layout_weight="2"
           android:textSize="@dimen/tamanioLetra"
           android:layout_height="wrap_content">

       </TextView>
       <EditText
           android:id="@+id/n1Txt"
           android:layout_weight="1"
           android:inputType="number"
           android:textSize="@dimen/tamanioLetra"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

       </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginBase">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n2Label"
            android:textSize="@dimen/tamanioLetra"
            android:layout_weight="2"
            android:gravity="center_horizontal">
        </TextView>
        <EditText
            android:id="@+id/n2Txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number"
            android:textSize="@dimen/tamanioLetra"
            android:layout_weight="1">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBase2"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:onClick="sumar"
            android:layout_height="@dimen/tamanioBtn"
            android:text="@string/sumarTxt"
            android:background="@color/colorSuma"
            android:textColor="@color/primary_light"
            android:textSize="@dimen/tamanioLetra"
            android:layout_weight="1">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:onClick="restar"
            android:layout_height="@dimen/tamanioBtn"
            android:layout_weight="1"
            android:text="@string/restaTxt"
            android:textColor="@color/primary_light"
            android:background="@color/colorResta"
            android:textSize="@dimen/tamanioLetra">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:onClick="multiplicar"
            android:layout_height="@dimen/tamanioBtn"
            android:text="@string/mulTxt"
            android:background="@color/colorMulti"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/tamanioLetra"
            android:layout_weight="1">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:onClick="dividir"
            android:layout_height="@dimen/tamanioBtn"
            android:layout_weight="1"
            android:text="@string/divTxt"
            android:textColor="@color/primary_light"
            android:background="@color/colorDiv"
            android:textSize="@dimen/tamanioLetra">
        </Button>
    </LinearLayout>

</LinearLayout>